project(BoostAsio)
cmake_minimum_required(VERSION 2.6)
find_package( Boost 1.53 REQUIRED COMPONENTS filesystem system thread)

file(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
foreach(filename ${files})
    get_filename_component(Basename ${filename} NAME_WE)
    add_executable(${Basename} ${filename})
    link_directories(${Boost_LIBRARY_DIR})
    TARGET_LINK_LIBRARIES(${Basename} ${Boost_LIBRARIES})
endforeach()
